<resources>
    <string name="app_name">My UC Timetable</string>
    <string name="title_activity_settings">Settings</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!--
    <string name="general_header">General Settings</string>
    <string name="notification_header">Notifications</string>
    -->

    <string name="calendar_top_left">Time of\nday</string>

    <!--
    <string name="sunday_first_day">Sunday is first day of week</string>
    <string name="display_24_hour">Display 24-hour time</string>

    <string name="lecture_notification_switch">Receive notifications for lectures</string>
    <string name="lab_notification_switch">Receive notifications for labs/tutorials</string>
    <string name="notification_mins_before_lecture">Minutes before lecture to receive notification</string>
    <string name="notification_first_class_mins_before_lecture">Minutes before first class of day to receive lecture notification</string>
    <string name="notification_mins_before_lab">Minutes before lab/tutorial to receive notification</string>
    <string name="notification_first_class_mins_before_lab">Minutes before first class of day to receive lab/tutorial notification</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    -->
    <string name="wip">Work In Progress</string>

    <string name="touch_anywhere_to_close">Tap anywhere to return</string>

    <string name="url_field">Calendar URL</string>
    <string name="progress_downloading_calendar">Downloading Calendar</string>
    <string name="progress_parsing_calendar">Generating Calendar</string>
    <string name="url_confirm">Start</string>
    <string name="instructions_for_getting_calendar_url">Instructions for getting calendar URL</string>
    <string name="login_instructions">Instructions for setting up app:\n
        1. Sign into MyTimetable\n
        2. Scroll down to the heading "Subscribe to your timetable"\n
        3. Copy the URL into the text box above and press start</string>

    <string name="mytimetable_hyperlink_text">Open MyTimetable</string>
    <string name="mytimetable_url" translatable="false">https://mytimetable.canterbury.ac.nz</string>

    <string name="room_not_found">Unknown</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="monday_short">Mon</string>
    <string name="tuesday_short">Tue</string>
    <string name="wednesday_short">Wed</string>
    <string name="thursday_short">Thu</string>
    <string name="friday_short">Fri</string>
    <string name="saturday_short">Sat</string>
    <string name="sunday_short">Sun</string>

    <string name="classtype_lecture">Lecture</string>
    <string name="classtype_lab">Lab</string>
    <string name="classtype_tutorial">Tutorial</string>
    <string name="classtype_test">Test</string>
    <string name="classtype_other">Other</string>
    <string name="classtype_workshop">Workshop</string>

    <string name="today">Today</string>

    <string name="offline_calendar">Viewing offline calendar</string>
    <string name="loaded_calendar">Loaded %COUNT% classes</string>
    <string name="failed_calendar">Failed to load calendar</string>
</resources>